<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_form"
            android:textSize="@dimen/sp_18"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstName"
            style="@style/Text.Regular.Large.Black.Brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:singleLine="true"
            android:text="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            style="@style/Text.Regular.Medium.Black.Brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textBlack"
            android:drawableEnd="@drawable/ic_profile"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_first_name"
            android:drawableTint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/standard_0"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastName"
            style="@style/Text.Regular.Large.Black.Brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:singleLine="true"
            android:text="@string/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            style="@style/Text.Regular.Medium.Black.Brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textBlack"
            android:drawableEnd="@drawable/ic_profile"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_last_name"
            android:drawableTint="@color/colorPrimary"
            android:paddingStart="@dimen/standard_0"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/Text.Regular.Large.Black.Brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:singleLine="true"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/Text.Regular.Medium.Black.Brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textBlack"
            android:drawableEnd="@drawable/ic_email"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/enter_your_email"
            android:paddingStart="@dimen/standard_0"
            android:paddingEnd="@dimen/_4sdp"
            android:drawableTint="@color/colorPrimary"
            android:paddingBottom="@dimen/_16sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSave"
            style="@style/CurvedButton"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_blue_curved_fill"
            android:singleLine="true"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>