<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">


    <View
        android:id="@+id/waveOne"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/wave_bg"
        android:rotation="180"

        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/waveTwo"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/wave_bg_tranparent"
        android:rotation="180"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appLogo"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_logo"
        android:layout_marginEnd="@dimen/_50dp"
        android:layout_marginStart="@dimen/_50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waveTwo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstName"
            style="@style/Text.Regular.Large.Black.Brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/email_id"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            style="@style/Text.Regular.Medium.Black.Brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textBlack"
            android:hint="@string/your_email"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingStart="@dimen/standard_0"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastName"
            style="@style/Text.Regular.Large.Black.Brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/password"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            style="@style/Text.Regular.Medium.Black.Brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textBlack"
            android:hint="@string/caps_password"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingEnd="@dimen/_4sdp"
            android:paddingStart="@dimen/standard_0"
            android:singleLine="true"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            style="@style/CurvedButton"
            android:layout_marginTop="@dimen/_50dp"
            android:background="@drawable/bg_blue_curved_fill"
            android:singleLine="true"
            android:text="@string/dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastName" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>